<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/grey_bg">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  	<EditText 
        android:id="@+id/edt_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        android:singleLine="true"/>
  	
  	<EditText 
        android:id="@+id/edt_register_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:singleLine="true"
        android:layout_below="@id/edt_register_name"/>
  	
  	<EditText 
        android:id="@+id/edt_register_phonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenum"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/phone_img"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:singleLine="true"
        android:layout_below="@id/edt_register_nick"/>
  	
  	
  	<EditText 
        android:id="@+id/edt_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/pwd_img"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:singleLine="true"
        android:layout_below="@id/edt_register_phonenum"/>
  	
  	<EditText 
        android:id="@+id/edt_register_pwd_agin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_agin"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/pwd_img"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:singleLine="true"
        android:layout_below="@id/edt_register_pwd"/>
  	
  	<TextView 
        android:id="@+id/text_register_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="出生日期"
        android:textColor="@color/black"
        android:textSize="@dimen/minsize"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="@dimen/dp5"
        android:background="@drawable/selector_edittext"
        android:padding="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_below="@id/edt_register_pwd_agin"/>
  	
  	<LinearLayout
  	    android:id="@+id/layout_sex" 
  	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_below="@id/text_register_birth"
        android:background="@drawable/selector_edittext"
        android:gravity="center_vertical">
  	    <TextView 
	        android:id="@+id/text_register_sex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/black"
	        android:textSize="@dimen/minsize"
	        android:padding="@dimen/dp10"
	        android:gravity="center_vertical"
	        android:singleLine="true"
	        android:drawableLeft="@drawable/user_icon"
        	android:drawablePadding="@dimen/dp5"
	        android:hint="@string/sex"/>
  	    <RadioGroup
  	        android:id="@+id/rdg_sex" 
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:orientation="horizontal">
  	        <RadioButton 
  	            android:id="@+id/rdb_male"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:textColor="@color/black"
  	            android:textSize="@dimen/minsize"
  	            android:text="@string/male"
  	            android:checked="true"/>
  	        <RadioButton 
  	            android:id="@+id/rdb_female"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:textColor="@color/black"
  	            android:textSize="@dimen/minsize"
  	            android:text="@string/female"
  	            />
  	    </RadioGroup>
  	</LinearLayout>
  	
  	<LinearLayout 
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:orientation="horizontal"
  	    android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:paddingBottom="@dimen/dp20"
        android:layout_below="@id/layout_sex">
  	    <TextView 
  	        android:id="@+id/text_cancel"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_weight="1"
  	        android:textColor="@color/white"
  	        android:textSize="@dimen/middlesize"
  	        android:text="@string/cancel"
  	        android:gravity="center"
  	        android:paddingLeft="@dimen/dp10"
  	        android:paddingRight="@dimen/dp10"
  	        android:paddingTop="@dimen/dp5"
  	        android:paddingBottom="@dimen/dp5"
  	        android:layout_marginRight="@dimen/dp5"
  	        android:background="@drawable/selector_bt"/>
  	    
  	    <TextView 
  	        android:id="@+id/text_sure"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_weight="1"
  	        android:textColor="@color/white"
  	        android:textSize="@dimen/middlesize"
  	        android:text="@string/sure"
  	        android:gravity="center"
  	        android:paddingLeft="@dimen/dp10"
  	        android:paddingRight="@dimen/dp10"
  	        android:paddingTop="@dimen/dp5"
  	        android:paddingBottom="@dimen/dp5"
  	        android:layout_marginLeft="@dimen/dp5"
  	        android:background="@drawable/selector_bt"/>
  	</LinearLayout>
  	
</RelativeLayout>
</ScrollView>
