<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="@drawable/contact_detail_bg">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp15"
        android:paddingBottom="@dimen/dp15"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10"
        android:gravity="center_vertical">
        
        <com.pot.gathering.view.CircleImageView
	        android:id="@+id/img_head"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/hand_error"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="0dp">
            <LinearLayout 
                android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/minsize_12"
	                android:textColor="@color/grey_light"
	                android:text="@string/name1"/>
                <TextView 
	                android:id="@+id/text_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/minsize_12"
	                android:textColor="@color/grey_light"
	                android:layout_marginLeft="@dimen/dp5"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/minsize_12"
	                android:textColor="@color/grey_light"
	                android:text="@string/nickname"/>
                <TextView 
	                android:id="@+id/text_nick_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/minsize_12"
	                android:textColor="@color/grey_light"
	                android:layout_marginLeft="@dimen/dp5"/>
            </LinearLayout>
            
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp15"
        android:paddingBottom="@dimen/dp15"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/minsize"
            android:textColor="@color/grey_light"
            android:text="@string/phonenum1"/>
        <TextView 
            android:id="@+id/text_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/minsize"
            android:textColor="@color/grey_light"
            android:singleLine="true"
            android:ellipsize="end"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30">
        <TextView 
            android:id="@+id/text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_corner_o"
            android:textSize="@dimen/middlesize"
            android:textColor="@color/black"
            android:text="@string/edit"
            android:paddingTop="@dimen/dp15"
            android:paddingLeft="@dimen/dp35"
            android:paddingRight="@dimen/dp35"
            android:paddingBottom="@dimen/dp70"
            />
        <TextView 
            android:id="@+id/text_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_corner_red"
            android:textSize="@dimen/middlesize"
            android:textColor="@color/white"
            android:text="@string/delete"
            android:paddingTop="@dimen/dp16"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:paddingBottom="@dimen/dp16"
            android:layout_alignBottom="@id/text_edit"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>
