<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/grey_bg">
    
    <include
        android:id="@+id/title" 
        layout="@layout/title"/>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/invite_bg"
        android:gravity="center_horizontal"
        android:layout_below="@id/title">
        <ScrollView 
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_marginTop="@dimen/dp30"
        	android:layout_marginLeft="@dimen/dp30"
        	android:layout_marginRight="@dimen/dp30"
        	android:layout_marginBottom="@dimen/dp22"
        	android:scrollbars="none">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView 
                    android:id="@+id/text_invite_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="家庭聚餐"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/middlesize"
                    android:layout_gravity="center_horizontal"/>
                
                <LinearLayout 
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/dp20">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invitor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"/>
                    <TextView
                        android:id="@+id/text_invitor" 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="小美"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"
                        android:layout_marginLeft="@dimen/dp5"/>
                </LinearLayout>
                
                <LinearLayout 
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/dp20">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invited"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"/>
                    <com.pot.gathering.view.MyGridView 
                        android:id="@+id/grid_invitedor"
                        android:layout_width="wrap_content"
                   		android:layout_height="wrap_content"
                   		android:numColumns="3"
                   		android:scrollbars="none"
                   		android:verticalSpacing="@dimen/dp10"
                   		android:listSelector="@color/transparent">
                        
                    </com.pot.gathering.view.MyGridView>
                </LinearLayout>
                
                <LinearLayout 
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/dp20">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"/>
                    <TextView
                        android:id="@+id/text_address" 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我家"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"
                        android:layout_marginLeft="@dimen/dp5"/>
                </LinearLayout>
                
                <LinearLayout 
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/dp20">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"/>
                    <com.pot.gathering.view.MyGridView 
                        android:id="@+id/grid_game"
                        android:layout_width="wrap_content"
                   		android:layout_height="wrap_content"
                   		android:numColumns="3"
                   		android:scrollbars="none"
                   		android:horizontalSpacing="@dimen/dp5"
                   		android:verticalSpacing="@dimen/dp5"
                   		android:listSelector="@color/transparent">
                        
                    </com.pot.gathering.view.MyGridView>
                </LinearLayout>
                
                <RelativeLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/dp20">
                    <TextView 
                        android:id="@+id/text_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/site"
                        android:textColor="@color/black"
                        android:textSize="@dimen/middlesize_18"/>
                    <LinearLayout
                        android:id="@+id/layout_site" 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="@dimen/dp5"
                        android:layout_below="@+id/text_site"/>
                    
                    <com.pot.gathering.view.SiteSelectView 
                        android:id="@+id/view_site"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"/>
                </RelativeLayout>
                
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
