<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_bg"
        android:orientation="vertical" >

        <include layout="@layout/title" />

        <RelativeLayout
            android:id="@+id/layout_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_notify" >

            <TextView
                android:id="@+id/text_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/dp10"
                android:text="通知"
                android:textColor="@color/white"
                android:textSize="@dimen/middlesize" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_weight="5"
                android:background="@color/invite_bg_color" />

            <TextView
                android:id="@+id/text_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/shadow_invite"
                android:gravity="center"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="@string/invite"
                android:textColor="@color/white"
                android:textSize="@dimen/maxsize"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ceng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_ceng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/shadow_ceng"
                android:gravity="center"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="@string/ceng"
                android:textColor="@color/white"
                android:textSize="@dimen/maxsize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_weight="5"
                android:background="@color/ceng_bg_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_weight="5"
                android:background="@color/contacts_bg_color" />

            <TextView
                android:id="@+id/text_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/shadow_contact"
                android:gravity="center"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="@dimen/maxsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/shadow_message"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10" >

                <TextView
                    android:id="@+id/text_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/message"
                    android:textColor="@color/white"
                    android:textSize="@dimen/maxsize" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/text_message"
                    android:layout_alignTop="@+id/text_message"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/text_message" >

                    <TextView
                        android:id="@+id/text_msg_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/circle_corner"
                        android:paddingBottom="@dimen/dp5"
                        android:paddingLeft="@dimen/dp3"
                        android:paddingRight="@dimen/dp3"
                        android:paddingTop="@dimen/dp5"
                        android:text="99+"
                        android:textColor="@color/white"
                        android:textSize="@dimen/minsize_12" />
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_weight="5"
                android:background="@color/message_bg_color" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/layout_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_weight="5"
                android:background="@color/other_bg_color" />

            <TextView
                android:id="@+id/text_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/shadow_other"
                android:gravity="center"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="@string/other"
                android:textColor="@color/white"
                android:textSize="@dimen/maxsize" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>